cluster/kubernetes/observability/gatus/ingress/gatus-http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gatus
  namespace: observability
  labels:
    route-label: external-dns-internal
spec:
  parentRefs:
    - name: internal-gateway
      namespace: network
      sectionName: gatus
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: gatus-web-svc
          port: 8080
